--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -23,4 +23,13 @@
     display: inherit;
     width: 100px;
   }
+
+  .navbar-collapse {
+    text-align: center;
+  }
+
+  .navbar-nav {
+    display: inline-block;
+    float: none !important;
+  }
 }
