--- a/layouts/partials/carousel.html
+++ b/layouts/partials/carousel.html
@@ -3,20 +3,12 @@
 {{ if gt (len .Site.Data.carousel) 0 }}
 <section>
     <div class="home-carousel">
-        <div class="dark-mask"></div>
         <div class="container">
             <div class="homepage owl-carousel">
                 {{ range sort .Site.Data.carousel "weight" }}
                 <div class="item">
-                    <div class="row">
-                        <div class="col-sm-5 right">
-                            <h1>{{ .title }}</h1>
-                            {{ .description | safeHTML }}
-                        </div>
-                        <div class="col-sm-7">
-                            <img class="img-responsive" src="{{ .image }}" alt="">
-                        </div>
-                    </div>
+                    <div class="owl-carousel-title">{{ .title }}</div>
+                    <img class="img-responsive" src="{{ .image }}" alt="">
                 </div>
                 {{ end }}
             </div>
